UX - prevented background scroll on followers list, but it only works when scroll bar is visible, when scrollbar is not visible the scroll event happens on body.

--- a/src/components/dashboard/Dashboard.scss
+++ b/src/components/dashboard/Dashboard.scss
@@ -122,6 +122,9 @@
   border-radius: 5px;
   cursor: auto;
   color: variables.$light-black;
+  height: calc(100vh - 60px);
+  overflow-y: scroll;
+  overscroll-behavior: contain;
 
   .header {
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
